# MSU

./: README.md
11-12 terms/: README.md
11-12 terms/HPC/03/: HPC_Vasilyev_620_03.cpp
3-4 terms/: IPC.c  README.md  ls.c  shell.c  sort.c
3-4 terms/model language interpreter/: Label.cpp  LexScanner.cpp  Parser.cpp  Poliz.cpp  Variable.cpp  main.cpp
5-6 terms/: README.md
5-6 terms/BCH/: bch.py  gf.py
5-6 terms/MPI_OpenMP/task1/: GNUPlotScript.plt  Makefile  equal.cpp  format_time_file.cpp  main.cpp  time_file_gen.cpp
5-6 terms/MPI_OpenMP/task1_2019/: Makefile  main.cpp
5-6 terms/MPI_OpenMP/task2/: GNU_plot_script.plt  Makefile  format_file.cpp  main.cpp  print.cpp  rand_matr_gen.cpp
5-6 terms/MPI_OpenMP/task2_2019/: Makefile  main.cpp
5-6 terms/MPI_OpenMP/task3_2019/: Makefile  main.cpp  rand_gen_complexd.cpp
5-6 terms/MPI_OpenMP/task3_MPI/: GNUPlotScript.plt  Makefile  main.cpp
5-6 terms/MPI_OpenMP/task3_pthread/: GNUPlotScript.plt  Makefile  main.cpp
5-6 terms/MPI_OpenMP/task4/: GNUPlotScript.plt  Makefile  main.cpp  map_gen.cpp
5-6 terms/MPI_OpenMP/task4_2019/: Makefile  print_complexd.cpp  q_gates.cpp  q_gates.h  test.cpp
5-6 terms/MPI_OpenMP/task5/: GNUPlotScript.plt  main.cpp  print.cpp  rand_matr_gen.cpp  test.cpp
5-6 terms/MPI_OpenMP/task5_2019/: Makefile  main.cpp  q_gates.cpp  q_gates.h  test.cpp
5-6 terms/graphics/task_01/: LiteMath.h  ShaderProgram.cpp  ShaderProgram.h  main.cpp  my_main.cpp  readme.txt
5-6 terms/graphics/task_02/: main.cpp  readme.txt
5-6 terms/graphics/task_03/: CMakeLists.txt  ShaderProgram.cpp  main.cpp  readme.txt
5-6 terms/graphics/task_03/dependencies/include/Hydra/: HydraVSGFExport.cpp
5-6 terms/graphics/task_03/shaders/: fragment.glsl  vertex.glsl
5-6 terms/networks/HW1/: 1.pcapng  1.txt  2.pcapng  2.txt  3.pcapng  3.txt  4.pcapng  4.txt  5.pcapng  5.txt
5-6 terms/networks/HW2/: net.pkt
5-6 terms/networks/HW3/: topology.pkt  topology_ospf.pkt  topology_rip.pkt  topology_static.pkt
5-6 terms/networks/HW4/: topology.pkt
5-6 terms/numerical methods/LU/: LU.py  input_matrix1  input_matrix2  output_matrix
5-6 terms/numerical methods/heat_equation/: heat_equation.py
5-6 terms/numerical methods/jacobi/: input_matrix.txt  jacobi.py  jacobi_numpy.py  output_matrix.txt
7-8 terms/: README.md
7-8 terms/cuda/: matrix_multiplications_template.cu  multiGPU_vec_add.cu  sample_vector_add_template.cu  shared_reverse_template.cu  stencil_template.cu  streams_vector_add_template.cu  transepose_matr.cu
7-8 terms/distributed systems/01_RabbitMQ/: data.py  main.py
7-8 terms/distributed systems/02_forum/: Client.py  Server.py  forum_state.json
7-8 terms/distributed systems/03_geojson/: client.py  frontend.py  test.ipynb  us_cut.geojson  worker.py
7-8 terms/elementary reflector/: Makefile  Reflector.cpp  Reflector.h  Report.odt  main.cpp  test.cpp
7-8 terms/quant (scalapack)/: Makefile  gen_h.cpp  gen_ro.cpp  main.cpp  scalapack.h
9-10 terms/: README.md
9-10 terms/bayesian methods/final project/: 520_Васильев.html  520_Васильев.ipynb
9-10 terms/bigdata (hadoop)/02_matmul/: config.xml
9-10 terms/image processing/01_lab/: 01_lab.py  02.html  02.ipynb
9-10 terms/image processing/02_lab/: 02.ipynb  02_lab.py  Results.txt
coursework (3 course)/: README.md
coursework (3 course)/code/: models.py  train.py
graduation (bachelor)/: README.md
graduation (bachelor)/GenNAS/: README.md  main.cpp
graduation (bachelor)/GenNAS/polus_code/: CMakeLists.txt  ClassicGenAlg.cpp  ClassicIndivid.cpp  QuantBit.cpp  QuantGenAlg.cpp  QuantIndivid.cpp  main.cpp  train.cpp
(+174 files in other folders)
